--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
     ],
     "files.associations": {
         "*.c_": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "esp_http_server.h": "c",
+        "esp_err.h": "c",
+        "esp_log.h": "c"
     }
 }
