Fully working, at low res :(

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     "d.neverUseDub": true,
     "d.projectImportPaths": [
         "./main/source"
-    ]
+    ],
+    "files.associations": {
+        "esp_timer.h": "c"
+    }
 }
