esp_wifi working partial bindings, enable drawer & wifi again

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "d.dubCompiler": "/opt/ldc-xtensa/bin/ldc2",
-    "d.dubArchType": "xtensa-esp32",
+    "d.dubArchType": "xtensa-esp32-none-elf",
     "d.stdlibPath": [
         "/opt/ldc-xtensa/include/d"
     ],
