Use new esp-dlang docker image

--- a/ldc2.conf
+++ b/ldc2.conf
@@ -1,7 +1,8 @@
 "xtensa-esp32-none-elf":
 {
     post-switches = [
-        "-I/opt/ldc-xtensa/include/d",
+        "-I/opt/ldc/include/d", // Docker
+        "-I/opt/ldc-xtensa/include/d", // Local
         "--mcpu=esp32",
     ];
 };
