Fix time overflow

--- a/ldc2.conf
+++ b/ldc2.conf
@@ -3,6 +3,7 @@
     post-switches = [
         "-I/opt/ldc/include/d", // Docker
         "-I/opt/ldc-xtensa/include/d", // Local
+        "-P--target=xtensa-esp32-none-elf",
         "--mcpu=esp32",
     ];
 };
